Praktikum 2 Meilenstein 2 Paket 3

--- a/M2/composer.json
+++ b/M2/composer.json
@@ -2,6 +2,7 @@
     "name": "mv6889s/m2",
     "require": {
         "vlucas/phpdotenv": "^3.6",
-        "ext-mysqli": "*"
+        "ext-mysqli": "*",
+      "ext-gd": "*"
     }
 }
